# faceDetector

./: .gitmodules  CMakeLists.txt  Callbacks.hpp  Detector.cpp  Detector.h  Face.cpp  Face.h  FaceChecker.cpp  FaceChecker.h  FaceRecognizer.cpp  FaceRecognizer.h  Faces.cpp  Faces.h  LICENSE  MyClassifier.hpp  RecognitionNet.hpp  Recognizer.cpp  Recognizer.h  Recognizer_Descriptors.cpp  Recognizer_Descriptors.h  Recognizer_LBPH.cpp  Recognizer_LBPH.h  config.json  config4test.json  main.cpp  utils.hpp
Detection/: Detection.cpp  Detection.h
Face/: Face.cpp  Face.h
Recognition/: Descriptors.cpp  Descriptors.h  LBPH.cpp  LBPH.h  recognition.cpp  recognition.h
Test/: Dataset.cpp  Dataset.h  detection.cpp  recognition.cpp  test.cpp
Test/Datasets/: Dataset.cpp  Dataset.h  Dataset_SoF.cpp  Dataset_SoF.h  Dataset_voc.cpp
Test/Datasets_new/: Dataset.h  Dataset_SoF.h  Dataset_voc.cpp  Dataset_voc.h
data/: labels.txt  model.yml
data/samples/: 1.csv  2.csv  fake.csv  real.csv
doc/: CMakeLists.txt  Doxyfile
examples/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt
src/Aligner/: Aligner.hpp  CMakeLists.txt
src/Aligner/Implementations/: CMakeLists.txt  DlibChipAligner.cpp  DlibChipAligner.h
src/Config/: CMakeLists.txt  Config.h
src/Database/: CMakeLists.txt  Database.hpp  DatabaseEntry.hpp
src/Database/Implementations/: CMakeLists.txt  StandaloneDatabase.hpp
src/Detector/: CMakeLists.txt  Detector.h  Detector.hpp  IDetector.cpp  IDetector.h  OcvDefaultDnnDetector.cpp  OcvDefaultDnnDetector.h  OcvDnnDetector.cpp  OcvDnnDetector.h
src/Detector/Implementations/: CMakeLists.txt  OcvDefaultDnnDetector.cpp  OcvDefaultDnnDetector.h
src/Face/: CMakeLists.txt  Face.cpp  Face.h
src/Landmarker/: CMakeLists.txt  Landmarker.hpp
src/Landmarker/Implementations/: CMakeLists.txt  DlibLandmarker.cpp  DlibLandmarker.h
src/Manager/: CMakeLists.txt  Manager.hpp
src/Manager/Implementations/: CMakeLists.txt  DefaultManager.cpp  DefaultManager.h  DefaultManager.hpp  NewFaceDatabaseRegistrar.hpp
src/Recognizer/: CMakeLists.txt  Recognizer.hpp
src/Recognizer/Descriptors/: CMakeLists.txt  Descriptor.cpp  Descriptor.hpp  DescriptorsClassifier.hpp  DescriptorsRecognizer.cpp  DescriptorsRecognizer.h  DlibResnetDescriptor.cpp  DlibResnetDescriptor.h  DlibResnetSvmRecognizer.h  DlibSvmClassifier.cpp  DlibSvmClassifier.h  MyClassifier.hpp
src/Recognizer/Implementations/: CMakeLists.txt
src/Recognizer/Implementations/Descriptors/: CMakeLists.txt  DlibResnetDescriptor.cpp  DlibResnetDescriptor.h  DlibResnetSvmRecognizer.h  (+2 more)
src/Tracker/: CMakeLists.txt  Tracker.hpp
src/Tracker/Implementations/: CMakeLists.txt  CentroidTracker.cpp  CentroidTracker.h
src/utils/: CMakeLists.txt  LookableAttributes.hpp  factory.hpp  utils.cpp  utils.h
utils/: Config.cpp  Config.h  Serialization.hpp  utils.hpp
